--- a/homepage/index.html
+++ b/homepage/index.html
@@ -32,7 +32,8 @@
     <div class="grid-2-container">
         <div class="grid-2-left-panel">
             <span class="about-title">About Summer Code Jam</span>
-            <span class="about-body">Summer Code Jam is a 2-month online coding challenge consisting of a series of competitions, online algorithm questions and online training workshops open to all students and professionals across the region.<br>The competitions are specially designed by the FAVE tech teams.</span>
+            <br>
+            <span class="about-body">Summer Code Jam is a 2-month<br>online coding challenge consisting of a<br>series of competitions, online algorithm<br>questions and online training workshops<br>open to all students and professionals<br>across the region.<br>The competitions are specially designed<br>by the FAVE tech teams.</span>
         </div>
         <div class="grid-2-img">
             <img src="illus2.png" alt="monitor-with-robot-displayed" height="522.73" width="588.01">
@@ -74,30 +75,44 @@
     <span class="contact-title">Contact Us</span>
     <div class="grid-4-container">
         <div class="grid-4-left-panel">
-            <a href="#">
-                <img src="Icon IG.svg" alt="instagram-icon" height="40.53" width="38.51">
-                <span>@summercodejam</span>
-            </a>
-            <a href="#">
-                <img src="Icon Mail.svg" alt="mail-icon" height="41" width="40">
-                <span>sdc@sdc.com</span>
-            </a>
-            <a href="#">
-                <img src="Icon Line.svg" alt="LINE-icon" height="41" width="39">
-                <span>summerjam</span>
-            </a>
-            <a href="#">
-                <img src="Icon WA.svg" alt="whatsapp-icon" height="40" width="38">
-                <span>+628118587938</span>
-            </a>
-            <a href="#">
-                <img src="Icon FB.svg" alt="facebook-icon" height="41" width="40">
-                <span>Summer Code Jam</span>
-            </a>
-            <a href="#">
-                <img src="Icon Twt.svg" alt="twitter-icon" height="41" width="40">
-                <span>@summercodejam</span>
-            </a>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="Icon IG.svg" alt="instagram-icon" height="40.53" width="38.51">
+                        <span>@summercodejam</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="Icon Mail.svg" alt="mail-icon" height="41" width="40">
+                        <span>sdc@sdc.com</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="Icon Line.svg" alt="LINE-icon" height="41" width="39">
+                        <span>summerjam</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="Icon WA.svg" alt="whatsapp-icon" height="40" width="38">
+                        <span>+628118587938</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="Icon FB.svg" alt="facebook-icon" height="41" width="40">
+                        <span>Summer Code Jam</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="Icon Twt.svg" alt="twitter-icon" height="41" width="40">
+                        <span>@summercodejam</span>
+                    </a>
+                </li>
+            </ul>
         </div>
         <div class="grid-4-img">
             <img src="illus7.png" alt="robot-calling-with-phone" height="472.81" width="503.82">
